# playground-api

./: .amp.toml  .env.sample  Cargo.toml  Dockerfile  README.md  justfile
.github/workflows/: docker.yml  release.yml
src/: app.rs  config.rs  context.rs  errors.rs  lib.rs  main.rs  routes.rs  swagger.rs  utils.rs
src/handlers/: file.rs  folder.rs  logger.rs  mod.rs  playbook.rs
src/requests/: file.rs  playbook.rs
src/responses/: playbook.rs
src/services/: file.rs  folder.rs  logger.rs  mod.rs  playbook.rs
