[package]
name = "playground-api"
version = "0.3.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/amphitheatre-app/playground-api"
authors = [
    "Eguo Wang <wangeguo@gmail.com>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "playground"
path = "src/lib.rs"

[dependencies]
amp-client = { git = "https://github.com/amphitheatre-app/amp-client-rust", tag = "v0.9.4" }
amp-common = { git = "https://github.com/amphitheatre-app/common", tag = "v0.9.5" }
anyhow = "1.0.95"
axum = { version = "0.7.9" }
clap = { version = "4.5.23", features = ["derive", "env"] }
dotenv = "0.15.0"
futures = "0.3.31"
reqwest-eventsource = "0.6.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid", "chrono", "macros"] }
utoipa-swagger-ui = { version = "8.1.0", features = ["axum", "reqwest"] }
uuid = { version = "1.11.1", features = ["serde", "v4", "fast-rng", "macro-diagnostics"] }
